# ArdanRustDebugOptimize

./: .gitignore  Day1.md  Day2.md  Day3.md  Day4.md  Day5.md  Outline.md
src/: Cargo.toml
src/as_into/: Cargo.toml
src/as_into/src/: main.rs
src/as_is/: Cargo.toml
src/as_is/src/: main.rs
src/as_try_into/: Cargo.toml
src/as_try_into/src/: main.rs
src/buggy_input/: Cargo.toml
src/buggy_input/src/: main.rs
src/buggy_input_cleaned/: Cargo.toml
src/buggy_input_cleaned/src/: main.rs
src/error_propagation/: Cargo.toml
src/error_propagation/src/: main.rs
src/floating_imprecision/: Cargo.toml
src/floating_imprecision/src/: main.rs
src/geometry_documented/: Cargo.toml
src/geometry_documented/examples/: area.rs
src/geometry_documented/src/: lib.rs
src/geometry_documented_full/: Cargo.toml
src/geometry_documented_full/src/: lib.rs
src/geometry_undocumented/: Cargo.toml
src/geometry_undocumented/src/: lib.rs
src/into_traits/: Cargo.toml
src/into_traits/src/: main.rs
src/length/src/: main.rs
src/logging/: Cargo.toml
src/logging/src/: main.rs
src/miles/: Cargo.toml
src/miles/src/: main.rs
src/multi_error/: Cargo.toml
src/multi_error_anyhow/: Cargo.toml
src/newtype_degrees/: Cargo.toml
src/newtype_degrees_radians/: Cargo.toml
src/panic_handler/: Cargo.toml
src/panic_thread/: Cargo.toml
src/pretty_nested/: Cargo.toml
src/pretty_print_debug/: Cargo.toml
src/pretty_print_format/: Cargo.toml
src/pretty_printing/: Cargo.toml
src/result_option/: Cargo.toml
src/type_aliases/: Cargo.toml
src/xtask/: Cargo.toml
(+15 files in other folders)
