[package]
name = "src"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "buggy_input",
    "buggy_input_cleaned",
    "pretty_printing",
    "pretty_print_debug",
    "pretty_print_format",
    "pretty_nested",
    "logging",
    "floating_imprecision",
    "geometry_undocumented",
    "geometry_documented",
    "geometry_documented_full",
    "xtask",
    "panic",
    "unwrap",
    "panic_thread",
    "panic_handler",
    "result_option",
    "multi_error",
    "multi_error_anyhow",
    "error_propagation",
    "as_is",
    "as_into",
    "as_try_into",
    "into_traits",
    "type_aliases",
    "newtype_degrees",
    "newtype_degrees_radians",
]
